add backend done user registration

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,6 @@
 VITE_WEATHER_API_KEY=a0025db8f29f3c7f498b58f80e9b9881
+
+
+# .env file in Frontend root directory
+VITE_API_URL=http://localhost:5000/api
+VITE_UPLOAD_URL=http://localhost:5000/uploads
