--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,7 +21,8 @@
     "helmet": "^6.2.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^2.0.2",
-    "stripe": "^20.0.0"
+    "stripe": "^20.0.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
